--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Discord bot to moderate chat and keep people friendly",
   "main": "bot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node bot.js"
   },
   "author": "Mason Sciotti",
   "license": "ISC",
